<resources>
    <string name="app_name">NotesApp</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account"><u>Create new account?</u></string>
    <string name="already_user"><u>Already User?</u></string>
    <string name="delete">delete</string>
    <string name="notes_app">Notes App</string>
</resources>