<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_marginTop="264dp"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <EditText
        android:id="@+id/confirmPassword"
        android:hint="@string/confirm_password"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <Button
        android:id="@+id/sign_up_btn"
        android:text="@string/sign_up"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>